--- a/code/package.json
+++ b/code/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fyr",
   "version": "1.0.0",
-  "description": "mall后台管理前端",
+  "description": "com-gallery组件库",
   "author": "macro",
   "private": true,
   "scripts": {
