--- a/code/package.json
+++ b/code/package.json
@@ -23,6 +23,7 @@
     "v-charts": "^1.19.0",
     "v-distpicker": "^1.0.20",
     "vue": "^2.5.2",
+    "vue-codemirror": "^4.0.6",
     "vue-json-editor": "^1.4.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
